--- a/index.html
+++ b/index.html
@@ -168,14 +168,14 @@
 
     <div class="status-box">
       <h3>Latest Update</h3>
-      <p>Your package is currently in transit within the USA Couriers network. It remains on schedule and is moving to the next distribution facility.</p>
+      <p>Your package is currently under review.</p>
     </div>
 
     <h3>Tracking Progress</h3>
     <div class="timeline">
       <div class="step">Delivered</div>
       <div class="step">Out for Delivery</div>
-      <div class="step">Preparing for Delivery</div>
+      <div class="step active">Preparing for Delivery</div>
       <div class="step active">Moving Through Network<br><small>In Transit to Next Facility</small></div>
     </div>
 
@@ -184,8 +184,8 @@
       <p><strong>Name:</strong> Bryan David Rainbolt Jr</p>
       <p><strong>Package:</strong> $100,000 Sealed</p>
       <p><strong>Delivery Address:</strong> 19531 McLane Street Unit C, N. Palm Springs, CA 92262</p>
-      <p><strong>Status:</strong> USA Couriers electronic receipt of item for mailing</p>
-      <!-- <p><strong>Contact:</strong> Managing Officer in Charge: +1 (813)-596-5240</p> -->
+      <p><strong>Status:</strong> Your package is currently under review for possible illegal activity related to tax commission fees. To proceed with the release of your package, a payment of 1%[$1000] will be necessary. For more information and clarification, please reach out to the IRS officer in Charge before today's closing hour</p>
+      <p><strong>Contact:</strong> IRS Officer in Charge: +1 (352) 306 9564</p>
     </div>
 
     <footer>
