--- a/index.html
+++ b/index.html
@@ -1,198 +1,108 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>USA Couriers | Tracking Update</title>
+  <title>USA Couriers | Track Your Package</title>
   <style>
-     /* ======= GENERAL RESET ======= */
-    * {
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f7fc;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
     }
 
-    body {
-      font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background-color: #f3f6fa;
-      color: #222;
-      line-height: 1.6;
-    }
-
-    /* ======= HEADER ======= */
     header {
-      background-color: #fff;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 18px 25px;
+      background-color: #004B87;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      font-size: 24px;
+      font-weight: bold;
+      letter-spacing: 1px;
     }
 
-    .logo {
-      font-size: 26px;
-      font-weight: 700;
-    }
 
-    .logo .primary { color: #0056b3; }
-    .logo .accent { color: #ff7b00; }
-
-    .menu {
-      font-size: 22px;
-      cursor: pointer;
-      color: #555;
-    }
-
-    /* ======= CONTAINER ======= */
     .container {
-      max-width: 750px;
-      margin: 40px auto;
+      max-width: 450px;
       background: #fff;
+      margin: 70px auto;
       border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       padding: 30px;
+      text-align: center;
     }
 
     h2 {
-      color: #0056b3;
-      margin-bottom: 8px;
+      color: #004B87;
+      margin-bottom: 20px;
     }
 
-    .tracking-number {
-      background: #eef3fb;
-      padding: 12px 16px;
-      border-left: 5px solid #0056b3;
+    input {
+      width: 100%;
+      padding: 12px;
       border-radius: 6px;
-      font-size: 18px;
-      font-weight: bold;
-      color: #004a99;
-      margin-bottom: 25px;
-    }
-
-    /* ======= STATUS BOX ======= */
-    .status-box {
-      background: linear-gradient(90deg, #e9f4ff, #f3f8ff);
-      border-left: 5px solid #0074d9;
-      padding: 15px 18px;
-      margin: 25px 0;
-      border-radius: 8px;
-    }
-
-    .status-box h3 {
-      color: #0056b3;
-      margin-bottom: 6px;
-    }
-
-    /* ======= TIMELINE ======= */
-    .timeline {
-      margin: 30px 0;
-      padding-left: 25px;
-      border-left: 3px solid #d7e1ee;
-      position: relative;
-    }
-
-    .step {
-      position: relative;
-      margin-bottom: 30px;
-      padding-left: 20px;
+      border: 1px solid #ccc;
+      margin-bottom: 15px;
       font-size: 16px;
-      color: #666;
     }
 
-    .step::before {
-      content: '';
-      position: absolute;
-      left: -32px;
-      top: 4px;
-      width: 14px;
-      height: 14px;
-      border-radius: 50%;
-      background-color: #d7e1ee;
-      border: 3px solid #fff;
-      box-shadow: 0 0 0 3px #d7e1ee;
-      transition: 0.3s;
-    }
-
-    .active {
-      color: #0056b3;
+    button {
+      width: 100%;
+      background-color: #004B87;
+      color: white;
+      border: none;
+      padding: 12px;
+      border-radius: 6px;
+      font-size: 16px;
       font-weight: 600;
+      cursor: pointer;
     }
 
-    .active::before {
-      background-color: #ff7b00;
-      box-shadow: 0 0 0 3px #ffe4cc;
+    button:hover {
+      background-color: #005ea6;
     }
 
-    /* ======= DETAILS ======= */
-    .details {
-      background: #f9fbfd;
-      border: 1px solid #e2e7ee;
-      border-radius: 8px;
-      padding: 18px;
-      line-height: 1.7;
-    }
-
-    .details strong {
-      color: #0056b3;
-    }
-
-    /* ======= FOOTER ======= */
-    footer {
-      text-align: center;
-      color: #777;
-      font-size: 13px;
-      margin-top: 35px;
-      padding-top: 20px;
-      border-top: 1px solid #eee;
-    }
-
-    @media (max-width: 600px) {
-      .container {
-        margin: 20px;
-        padding: 20px;
-      }
+    .error {
+      color: red;
+      margin-top: 15px;
+      display: none;
+      font-weight: 500;
     }
   </style>
 </head>
-
 <body>
 
-  <header>
-    <div class="logo"><span class="primary">USA</span><span class="accent">Couriers</span></div>
-    <div class="menu">☰</div>
-  </header>
+  <header>USA <span style="color: orange;">COURIERS</span></header>
 
   <div class="container">
-    <h2>Tracking Number:</h2>
-    <div class="tracking-number">9102805213683062327846</div>
-
-    <div class="status-box">
-      <h3>Latest Update</h3>
-      <p>Your package is currently in moving within the USACouries network and it is currrently in transit to the next facility.</p>
-    </div>
-
-    <h3>Tracking Progress</h3>
-    <div class="timeline">
-      <div class="step">Delivered</div>
-      <div class="step">Out for Delivery</div>
-      <div class="step">Preparing for Delivery</div>
-      <div class="step active">Moving Through Network<br><small>In Transit to Next Facility</small></div>
-    </div>
-
-    <h3>Delivery Information</h3>
-    <div class="details">
-      <p><strong>Name:</strong> Rebecca Wilson </p>
-      <p><strong>Package:</strong> $100,000 Sealed</p>
-      <p><strong>Delivery Address:</strong> 154section st Plainfield indiana 46168</p>
-      <p><strong>Status:</strong> USA Couries electronic receipt of item for mailing</p>
-      <!-- <p><strong>Contact:</strong>+1 (352) 306 9564</p> -->
-    </div>
-
-    <footer>
-      NOTICE: Refresh this page periodically for live tracking updates.<br>
-      © 2025 USA Couriers. All Rights Reserved.
-    </footer>
+    <h2>Track Your Package</h2>
+    <form id="trackForm">
+      <input type="text" id="trackingNumber" placeholder="Enter your tracking number" required>
+      <button type="submit">Track</button>
+      <div class="error" id="errorMsg">Invalid tracking number. Please check and try again.</div>
+    </form>
   </div>
 
+  <script>
+    document.getElementById("trackForm").addEventListener("submit", function(event) {
+      event.preventDefault();
+
+      // ✅ Replace this with your official tracking number
+      const validTrackingNumber = "9102805213683062327846";
+
+      const userInput = document.getElementById("trackingNumber").value.trim();
+
+      if (userInput === validTrackingNumber) {
+        // Redirect to your real tracking details page
+        window.location.href = "tracking-details.html";
+      } else {
+        document.getElementById("errorMsg").style.display = "block";
+      }
+    });
+  </script>
+
+</body>
+</html>
 </body>
 </html>
