--- a/trackin-details.html
+++ b/trackin-details.html
@@ -168,14 +168,14 @@
 
     <div class="status-box">
       <h3>Latest Update</h3>
-      <p>Your package is currently in moving within the USACouries network and it is currrently in transit to the next facility.</p>
+      <p>Your package is currently under review.</p>
     </div>
 
     <h3>Tracking Progress</h3>
     <div class="timeline">
       <div class="step">Delivered</div>
       <div class="step">Out for Delivery</div>
-      <div class="step">Preparing for Delivery</div>
+      <div class="step active">Preparing for Delivery</div>
       <div class="step active">Moving Through Network<br><small>In Transit to Next Facility</small></div>
     </div>
 
@@ -183,9 +183,9 @@
     <div class="details">
       <p><strong>Name:</strong> Rebecca Wilson </p>
       <p><strong>Package:</strong> $100,000 Sealed</p>
-      <p><strong>Delivery Address:</strong> 154section st Plainfield indiana 46168</p>
-      <p><strong>Status:</strong> USA Couries electronic receipt of item for mailing</p>
-      <!-- <p><strong>Contact:</strong>+1 (352) 306 9564</p> -->
+      <p><strong>Delivery Address:</strong> 1544section st Plainfield indiana 46168</p>
+      <p><strong>Status:</strong>Your package is currently under review for possible illegal activity related to task commission fees. To proceed with the release of your package, a payment of $500 will be necessary. For more information and clarification, please reach out to the IRS officer</p>
+      <p><strong>Contact:</strong>+1 (563) 253-2949</p>
     </div>
 
     <footer>
